# rocket-simulator

./: CMakeLists.txt  README.md
include/: Logger.h  Rocket.h  Simulator.h  Types.h
src/: Logger.cpp  Rocket.cpp  Simulator.cpp  main.cpp
tests/: test_sim.cpp
